--- a/src/main/resources/templates/23433073.html
+++ b/src/main/resources/templates/23433073.html
@@ -1,60 +1,51 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+    xmlns:sec="http://www.thymelead.org/extras/spring-security">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Busqueda Propietario</title>
-  <link rel="icon" href="/img/home_243.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="/css/index.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <style>
-    body {
-      margin-bottom: 40px;
-      position: relative;
-    }
-
-    .footer {
-      position: fixed;
-      bottom: 20px;
-      left: 20px;
-      right: 20px;
-      background-color: #343a40;
-      color: white;
-      padding: 15px;
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Propiedades</title>
+    <link rel="icon" href="/img/home_243.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/index.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
+    <nav th:replace="/fragments/navbar" :: nav> </nav>
 
-  <nav th:replace="/fragments/navbar" :: nav> </nav>
+    <div style="position: fixed; bottom: 79px; right: 15px; z-index: 1000;">
+        <a href="https://wa.me/+5491150513333" target="_blank">
+            <img src="/img/logowpp.svg" alt="Logo de WhatsApp" width="120">
+        </a>
 
-  <div class="px-4 pt-5 my-5 text-center" style="background: rgba(255, 255, 255, 0.7); border: none;">
-    <h1 class="display-4 fw-bold text-body-emphasis">Verificación de DNI</h1>
-    <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4 custom-text"><b>Ingresá el DNI para verificar que esté en la base de datos ya cargado.</b></p>
-      <p class="lead mb-4"><b>En caso de que no esté, serás redirigido al formulario para cargar un nuevo cliente.</b>
-      </p>
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-        <form onsubmit="return validarBusqueda()" action="/propietario/buscarPropietario" method="POST" class="d-flex"
-          role="search">
-          <div class="row">
-            <div class="col-sm-10">
-              <input type="text" class="form-control form-control-lg" id="dniInput" name="dni" required pattern="\d*"
-                placeholder="DNI">
+    </div>
+
+    <div th:replace="/fragments/cardError1" :: div></div>
+
+    <section class="py-5 text-center container">
+
+        <form class="formulario mx-auto" th:action="@{/logincheck}" method="POST" style="width: 400px;">
+            <img class="mb-4" src="/img/armenteros original.png" alt="" width="200px">
+
+            <h1 class="h3 mb-3 fw-normal">Por favor inicia sesión</h1>
+            <div class="form-floating">
+                <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@example.com">
+                <label for="floatingInput">Dirección de correo electrónico</label>
             </div>
-          </div>
-          <button type="submit" class="btn btn-primary btn-lg px-4 me-sm-3">Buscar</button>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" name="password"
+                    placeholder="Contraseña">
+                <label for="floatingPassword">Contraseña</label>
+            </div>
+            <button class="btn btn-primary w-100 py-2" type="submit"
+                style="background-color: #212529; border: none; margin-top: 30px;">Iniciar sesión</button>
         </form>
-      </div>
-    </div>
-    <div class="overflow-hidden" style="max-height: 30vh;">
-    </div>
-  </div>
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 bg-dark text-white fixed-bottom">
+
+    </section>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 bg-dark text-white fixed-bottom">
         <div class="col-md-4 d-flex align-items-center">
             <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
                 <svg class="bi" width="30" height="24">
@@ -95,51 +86,12 @@
                 </a></li>
         </ul>
     </footer>
-  
-  <span id="error" style="display: none; color: red; margin-left: 590px; font-size: 20px">Debe ingresar entre 7 y 8
-    números</span>
-
-  <script>
-    function validarBusqueda() {
-      var busqueda = document.getElementById("dniInput");
-      var inputValue = busqueda.value;
-      if (
-        inputValue.length < 7 ||
-        inputValue.length > 8 ||
-        !/^\d*$/.test(inputValue)
-      ) {
-        document.getElementById("error").style.display = "inline";
-        localStorage.removeItem("valor"); // Eliminar el valor almacenado si no es válido
-        return false;
-      } else {
-        document.getElementById("error").style.display = "none"; // Ocultar el mensaje de error si el valor es válido
-        // Almacenar el valor de entrada válido en localStorage
-        localStorage.setItem("valor", inputValue);
-        return true;
-      }
-    }
-  </script>
-
-  <script>
-    document.getElementById("buscar").addEventListener("click", function () {
-      var inputValue = document.getElementById("dniInput").value;
-      if (
-        inputValue.length >= 7 &&
-        inputValue.length <= 8 &&
-        /^\d*$/.test(inputValue)
-      ) {
-        window.location.href = "propietario_form.html";
-      } else {
-        localStorage.removeItem("valor");
-      }
-    });
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
+<script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 
 </html>
