--- a/src/main/resources/templates/imagenes_modificar.html
+++ b/src/main/resources/templates/imagenes_modificar.html
@@ -1,101 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-         <link rel="icon" href="/img/home_243.ico" type="image/x-icon" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <title>Modificar Imagenes</title>
-        <link rel="stylesheet" href="/css/index.css">
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/img/home_243.ico" type="image/x-icon" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Modificar Imagenes</title>
+    <link rel="stylesheet" href="/css/index.css" />
+</head>
 
-    <body>
-        <div th:replace="/fragments/casa" :: div></div>
-        <nav th:replace="/fragments/navbar :: div"></nav>
+<body>
+    <nav th:replace="/fragments/navbar" :: nav> </nav>
 
-        <div class="container" style="width: 1800px; height: 1000px">
-            <div style="text-align: center; margin-bottom: 15px">
-                <h1>Imagenes de la Propiedad</h1>
-                <h4 th:text="${propiedad.tipoVivienda}"></h4>
-                <h4 th:text="${propiedad.estado}"></h4>
-                <h5 th:text="'Calle: ' + ${propiedad.calle}"></h5>
-                <h5 th:text="'Propietario: ' + ${propiedad.propietario.nombreApellido}"></h5>
-
-            </div>
+    <main>
+        <div class="px-0 pt-0 my-0 text-center">
             <div class="container">
-                <table>
-                    <tr th:each="imagen1: ${imagen1}">
-                    <img style="width: 115px; border-radius: 20px; height: 60px; margin-left: 5px; margin-right: 5px; margin-bottom: 5px" th:src="'data:image/jpeg;base64,' + ${#strings.toString(imagen1)}" alt="Imagen">
-                    </tr> 
-                </table>
-            </div>
-            <div class="container">
-                <table>
-                    <tr th:each="imagenes: ${imagenes}">
-                    <button class="btn-primary" style="width: 115px; height: 40px; margin-left: 5px; margin-right: 5px; border-radius: 12px">
-                        <a class="modificar" style="color: white; text-decoration: none; font-size: 20px" th:href="@{/imagen/modificar1/__${imagenes.idImagen}__}">Modificar</a>
-                    </button>
-                    </tr>
-                </table>
+                <div class="card bg-dark text-white" style="border-radius: 15px; margin: 20px;">
+                    <div class="card-header" style="border-bottom: 0px solid rgba(0,0,0,.125);">
+                        <div class="row g-0">
+                            <div class="col-md-4" style="width: 50%;">
+                                <div class="container">
+                                    <table>
+                                        <tr th:each="imagen1, iterStat: ${imagen1}" th:if="${iterStat.index == 0}">
+                                            <div style="position: relative; width: 100%; margin-bottom: 5px;">
+                                                <img style="width: 100%; border-radius: 20px; object-fit: cover; aspect-ratio: 1 / 1; margin-left: 1px; margin-right: 5px; margin-bottom: 5px"
+                                                    th:src="'data:image/jpeg;base64,' + ${#strings.toString(imagen1)}"
+                                                    alt="Imagen">
+                                                <span
+                                                    style="position: absolute; bottom: 15px; left: 50%; transform: translateX(-50%); background-color: black; padding: 5px; border-radius: 5px;">
+                                                    Imagen de Portada
+                                                </span>
+                                            </div>
+                                        </tr>
+                                    </table>
+                                </div>
+                                <div class="container">
+                                    <table>
+                                        <tr th:each="imagenes, iterStat: ${imagenes}" th:if="${iterStat.index == 0}">
+                                            <button class="btn btn-sm btn-outline-secondary"
+                                                style="border-radius: 10px; margin-left: 20px; margin-right: 20px;">
+                                                <a class="modificar"
+                                                    style="color: white; text-decoration: none; font-size: 20px"
+                                                    th:href="@{/imagen/modificar1/__${imagenes.idImagen}__}">Modificar</a>
+                                            </button>
+                                        </tr>
+                                    </table>
+                                    </tr>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="col-md-8" style="width: 45%;">
+                                <div class="card-body" th:each="propiedad : ${propiedad}">
+                                    <h3
+                                        style="font-family: 'Sometype Mono', sans-serif; color: white; text-align: left;">
+                                        Imágenes de la propiedad
+                                    </h3>
+                                    <h5 th:text="'Estado: '+${propiedad.estado}"
+                                        style="font-family: 'Sometype Mono', sans-serif; color: white; text-align: left;">
+                                    </h5>
+                                    <h5 th:text="'Calle: ' + ${propiedad.calle}+' '+${propiedad.altura}"
+                                        style="font-family: 'Sometype Mono', sans-serif; color: white; text-align: left;">
+                                    </h5>
+                                    <h5 th:text="'Propietario: ' + ${propiedad.propietario.nombreApellido}"
+                                        style="font-family: 'Sometype Mono', sans-serif; color: white; text-align: left;">
+                                    </h5>
+                                    <h5 th:text="'Id Propiedad: ' + ${propiedad.idPropiedad}"
+                                        style="font-family: 'Sometype Mono', sans-serif; color: white; text-align: left;">
+                                    </h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container">
+                        <table>
+                            <tr th:each="imagen1, iterStat: ${imagen1}"
+                                th:if="${iterStat.index > 0 && iterStat.index < 11}">
+                                <img style="width: 110px; border-radius: 20px; object-fit: cover; aspect-ratio: 1 / 1; margin-left: 5px; margin-right: 5px; margin-bottom: 5px"
+                                    th:src="'data:image/jpeg;base64,' + ${#strings.toString(imagen1)}" alt="Imagen">
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="container">
+                        <table>
+                            <tr th:each="imagenes, iterStat: ${imagenes}"
+                                th:if="${iterStat.index > 0 && iterStat.index < 11}">
+                                <button class="btn btn-sm btn-outline-secondary"
+                                    style="width: 90px; border-radius: 5px; margin-left: 15px; margin-right: 15px;">
+                                    <a class="modificar" style="color: white; text-decoration: none; font-size: 14px"
+                                        th:href="@{/imagen/modificar1/__${imagenes.idImagen}__}">Modificar</a>
+                                </button>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="container">
+                        <table>
+                            <tr th:each="imagen1, iterStat: ${imagen1}" th:if="${iterStat.index >= 11 }">
+                                <img style="width: 110px; border-radius: 20px; object-fit: cover; aspect-ratio: 1 / 1; margin-left: 5px; margin-right: 5px; margin-bottom: 10px"
+                                    th:src="'data:image/jpeg;base64,' + ${#strings.toString(imagen1)}" alt="Imagen">
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="container">
+                        <table>
+                            <tr th:each="imagenes, iterStat: ${imagenes}" th:if="${iterStat.index >= 11}">
+                                <button class="btn btn-sm btn-outline-secondary"
+                                    style="width: 90px; border-radius: 5px; margin-left: 15px; margin-right: 15px; margin-bottom: 10px;">
+                                    <a class="modificar" style="color: white; text-decoration: none; font-size: 14px"
+                                        th:href="@{/imagen/modificar1/__${imagenes.idImagen}__}">Modificar</a>
+                                </button>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
+        </div>
+        <div class="modal fade" id="contactModal1" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel"
+            aria-hidden="true">
+        </div>
 
-        <script>
-            const inputImagenes = document.getElementById("inputImagenes");
-            const imagenPrevia = document.getElementById("imagenPrevia");
-            const maxFileSizeBytes = 1048576; // 1 megabyte en bytes
-            const maxFileCount = 10;
+        <div th:replace="/fragments/footer" :: div></div>
+    </main>
 
-            inputImagenes.addEventListener("change", (event) => {
-                imagenPrevia.innerHTML = ""; // Limpia la previsualización anterior
-                const files = event.target.files;
-                let totalSize = 0;
+    <script>
+        const inputImagenes = document.getElementById("inputImagenes");
+        const imagenPrevia = document.getElementById("imagenPrevia");
+        const maxFileSizeBytes = 1048576; // 1 megabyte en bytes
+        const maxFileCount = 10;
 
-                if (files.length > maxFileCount) {
-                    alert("No se pueden cargar más de " + maxFileCount + " archivos.");
+        inputImagenes.addEventListener("change", (event) => {
+            imagenPrevia.innerHTML = ""; // Limpia la previsualización anterior
+            const files = event.target.files;
+            let totalSize = 0;
+
+            if (files.length > maxFileCount) {
+                alert("No se pueden cargar más de " + maxFileCount + " archivos.");
+                inputImagenes.value = ""; // Limpia la selección
+                return;
+            }
+
+            for (let i = 0; i < files.length; i++) {
+                const file = files[i];
+                if (file.size > maxFileSizeBytes) {
+                    alert("El archivo " + file.name + " supera el tamaño máximo de 1 megabyte.");
                     inputImagenes.value = ""; // Limpia la selección
                     return;
                 }
 
-                for (let i = 0; i < files.length; i++) {
-                    const file = files[i];
-                    if (file.size > maxFileSizeBytes) {
-                        alert("El archivo " + file.name + " supera el tamaño máximo de 1 megabyte.");
-                        inputImagenes.value = ""; // Limpia la selección
-                        return;
-                    }
+                totalSize += file.size;
 
-                    totalSize += file.size;
+                const imagen = document.createElement("img");
+                imagen.classList.add("img-thumbnail");
+                imagen.width = 100;
+                imagen.height = 100;
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    imagen.src = e.target.result;
+                };
+                reader.readAsDataURL(file);
+                imagenPrevia.appendChild(imagen);
+            }
 
-                    const imagen = document.createElement("img");
-                    imagen.classList.add("img-thumbnail");
-                    imagen.width = 100;
-                    imagen.height = 100;
-                    const reader = new FileReader();
-                    reader.onload = (e) => {
-                        imagen.src = e.target.result;
-                    };
-                    reader.readAsDataURL(file);
-                    imagenPrevia.appendChild(imagen);
-                }
-
-                if (totalSize > maxFileSizeBytes * maxFileCount) {
-                    alert("El tamaño total de los archivos supera los " + maxFileCount + " megabytes.");
-                    inputImagenes.value = ""; // Limpia la selección
-                    return;
-                }
-            });
-        </script>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            if (totalSize > maxFileSizeBytes * maxFileCount) {
+                alert("El tamaño total de los archivos supera los " + maxFileCount + " megabytes.");
+                inputImagenes.value = ""; // Limpia la selección
+                return;
+            }
+        });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-                integrity="sha384-KyZXEAg3QhqLMpG8r+qUwIS5ll7J6Cn4/9O3zM5xZn7uuE5rTI5F5CcRDL6f5z3T5"
-        crossorigin="anonymous"></script>
-    </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
 
 </html>
